Introduced the forecast API and implemented the forecast bar
- Web app now also uses the Wunderground forecast API to pull in
forecast data for the following 3 days in addition to the current
conditions (which comes from the conditions API)
- A total of 3 AJAX calls are made to display the relevant information
on the screen now; the IP API to get location data, the conditions API
to get present weather data, and the forecast API to get weather
prediction data
- Re-did the layout of the web app to have two main sections; the main
section with current conditions along with the second section/half with
the weather forecast
- All HTML is empty, acting as a template that will later be filled with
the results of the AJAX calls

To Do:
- Need to have each forecast box be a different shade of blue (a
gradient that gradually gets lighter). Thinking of doing this by setting
the forecast-box's color with a JavaScript loop
- Figure out why the current conditions temperature is also displaying a
unicode character along with the temp
- Finish implementing the layout

--- a/index.html
+++ b/index.html
@@ -9,21 +9,56 @@
 
 <body>
 
-  <div class="main-box">
-    <div class="left-side">
-      <p class="location"></p>
-      <p class="temperature-info"></p>
-      <p class="weather-info"></p>
-      <p class="temperature-button">°C</p>
+  <div class="container">
+    <div class="main-section">
+      <div class="left-side">
+        <span id="main-location"></span>
+        <span id="main-temp"></span>
+        <span id="main-weather-info"></span>
+        <span id="temperature-button">C</span>
+      </div>
+
+      <span id="main-weather-icon">Test</span>
     </div>
 
-    <span id="weather-icon"></span>
+
+    <div id="forecast-section">
+      <div class="forecast-box">
+        <div class="forecast-day"></div>
+        <div class="forecast-icon"></div>
+        <div class="forecast-temp"></div>
+        <div class="forecast-info"></div>
+      </div>
+
+      <div class="forecast-box">
+        <div class="forecast-day"></div>
+        <div class="forecast-icon"></div>
+        <div class="forecast-temp"></div>
+        <div class="forecast-info"></div>
+      </div>
+
+      <div class="forecast-box">
+        <div class="forecast-day"></div>
+        <div class="forecast-icon"></div>
+        <div class="forecast-temp"></div>
+        <div class="forecast-info"></div>
+      </div>
+
+      <div class="forecast-box">
+        <div class="forecast-day"></div>
+        <div class="forecast-icon"></div>
+        <div class="forecast-temp"></div>
+        <div class="forecast-info"></div>
+      </div>
+    </div>
+
   </div>
 
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
+
 </body>
 
 </html>
