Added in functionality to change temperature units between Fahrenheit and Celsius
- Created new children elements to separate the forecasts' high
temperatures and low temperatures
- Used arrays to store the high and low temperatures in both F and C
- Button to convert temperature units simply loops through the HTML
elements and injects data from the correspondingly indexed item from the
temperature arrays

--- a/index.html
+++ b/index.html
@@ -26,28 +26,40 @@
       <div class="forecast-box">
         <div class="forecast-day"></div>
         <div class="forecast-icon"></div>
-        <div class="forecast-temp"></div>
+        <div class="forecast-temp">
+          <div class="forecast-temp-high"></div>
+          <div class="forecast-temp-low"></div>
+        </div>
         <div class="forecast-info"></div>
       </div>
 
       <div class="forecast-box">
         <div class="forecast-day"></div>
         <div class="forecast-icon"></div>
-        <div class="forecast-temp"></div>
+        <div class="forecast-temp">
+          <div class="forecast-temp-high"></div>
+          <div class="forecast-temp-low"></div>
+        </div>
         <div class="forecast-info"></div>
       </div>
 
       <div class="forecast-box">
         <div class="forecast-day"></div>
         <div class="forecast-icon"></div>
-        <div class="forecast-temp"></div>
+        <div class="forecast-temp">
+          <div class="forecast-temp-high"></div>
+          <div class="forecast-temp-low"></div>
+        </div>
         <div class="forecast-info"></div>
       </div>
 
       <div class="forecast-box">
         <div class="forecast-day"></div>
         <div class="forecast-icon"></div>
-        <div class="forecast-temp"></div>
+        <div class="forecast-temp">
+          <div class="forecast-temp-high"></div>
+          <div class="forecast-temp-low"></div>
+        </div>
         <div class="forecast-info"></div>
       </div>
     </div>
