--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="main2.js"></script>
 
 </body>
 
