--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
   </div>
 
 
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="main2.js"></script>
-
+  <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
