Added a search bar without logic behind its function yet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
 
   <div class="container">
+    <div class='navbar'>
+      <input id='searchbar' placeholder='Search: City, State'></input>
+    </div>
+
     <div class="main-section">
       <div class="main-section-component" id="left-side">
         <div id="main-location"></div>
