Added in search bar functionality to search for weather in other cities

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <div class='navbar'>
-      <input id='searchbar' placeholder='Search: City, State'></input>
+      <input id='searchBar' type ='text' placeholder='Search: City, State'></input>
     </div>
 
     <div class="main-section">
